--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,18 @@
     <artifactId>Hibernate</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
     <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
         <version>5.2.12.Final</version>
     </dependency>
+
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.6</version>
+    </dependency>
+    </dependencies>
 
 </project>
